--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                                             <div class="gdlr-core-pbf-element">
                                                 <div class="gdlr-core-title-item gdlr-core-item-pdb clearfix  gdlr-core-left-align gdlr-core-title-item-caption-bottom gdlr-core-item-pdlr" id="div_1dd7_25">
                                                     <div class="gdlr-core-title-item-title-wrap clearfix">
-                                                        <h3 class="gdlr-core-title-item-title gdlr-core-skin-title " id="h3_1dd7_5">About Our University</h3></div>
+                                                        <h3 class="gdlr-core-title-item-title gdlr-core-skin-title " id="h3_1dd7_5">About Our School</h3></div>
                                                 </div>
                                             </div>
                                         </div>
@@ -158,14 +158,17 @@
                                             <div class="gdlr-core-pbf-element">
                                                 <div class="gdlr-core-text-box-item gdlr-core-item-pdlr gdlr-core-item-pdb gdlr-core-left-align" id="div_1dd7_26">
                                                     <div class="gdlr-core-text-box-item-content" id="div_1dd7_27">
-                                                        <p>We are one of the largest, most diverse universities in the USA with over 90,000 students in USA, and a further 30,000 studying across 180 countries for Kingster University.</p>
+                                                        <p>The Urji Beri Primary School offers education for children aged 3 to 13. Its curriculum is based on the programs of the Ministry of Education and taught in Amharic and English language.</p>
                                                     </div>
                                                 </div>
                                             </div>
                                             <div class="gdlr-core-pbf-element">
                                                 <div class="gdlr-core-text-box-item gdlr-core-item-pdlr gdlr-core-item-pdb gdlr-core-left-align" id="div_1dd7_28">
                                                     <div class="gdlr-core-text-box-item-content" id="div_1dd7_29">
-                                                        <p>Kingster University was established by John Smith in 1920 for the public benefit and it is recognized globally. Throughout our great history, Kingster has offered access to a wide range of academic opportunities. As a world leader in higher education, the University has pioneered change in the sector.</p>
+                                                        <p>Our mission is to Support a safe, caring, respectful environment that values creativity, diversity, and inclusivity.
+                                                            Develop self-aware learners with the tools for fulfillment in their world and beyond.
+                                                            Provide best practice learning that empowers individuals to set and reach high standards.
+                                                            Encourage students to think globally and act locally.</p>
                                                     </div>
                                                 </div>
                                             </div>
@@ -190,7 +193,7 @@
                                                     <div class="gdlr-core-column-service-media gdlr-core-media-image" id="div_1dd7_33"><img src="upload/col-icon-1.png" alt="" width="41" height="41" title="col-icon-1" /></div>
                                                     <div class="gdlr-core-column-service-content-wrapper">
                                                         <div class="gdlr-core-column-service-title-wrap">
-                                                            <h3 class="gdlr-core-column-service-title gdlr-core-skin-title" id="h3_1dd7_6">Education Services</h3></div>
+                                                            <h3 class="gdlr-core-column-service-title gdlr-core-skin-title" id="h3_1dd7_6">Experienced Students</h3></div>
                                                         <div class="gdlr-core-column-service-content" id="div_1dd7_34">
                                                             <p>Kingster University was established by John Smith in 1920 for the public benefit and it is recognized.</p> <a class="gdlr-core-column-service-read-more gdlr-core-info-font" href="#" id="a_1dd7_1">Learn More</a></div>
                                                     </div>
@@ -207,7 +210,7 @@
                                                     <div class="gdlr-core-column-service-media gdlr-core-media-image" id="div_1dd7_36"><img src="upload/col-icon-2.png" alt="" width="43" height="45" title="col-icon-2" /></div>
                                                     <div class="gdlr-core-column-service-content-wrapper">
                                                         <div class="gdlr-core-column-service-title-wrap">
-                                                            <h3 class="gdlr-core-column-service-title gdlr-core-skin-title" id="h3_1dd7_7">International Hubs</h3></div>
+                                                            <h3 class="gdlr-core-column-service-title gdlr-core-skin-title" id="h3_1dd7_7">High Quality Education</h3></div>
                                                         <div class="gdlr-core-column-service-content" id="div_1dd7_37">
                                                             <p>Kingster University was established by John Smith in 1920 for the public benefit and it is recognized.</p> <a class="gdlr-core-column-service-read-more gdlr-core-info-font" href="#" id="a_1dd7_2">Learn More</a></div>
                                                     </div>
@@ -224,7 +227,7 @@
                                                     <div class="gdlr-core-column-service-media gdlr-core-media-image" id="div_1dd7_39"><img src="upload/col-icon-3.png" alt="" width="40" height="43" title="col-icon-3" /></div>
                                                     <div class="gdlr-core-column-service-content-wrapper">
                                                         <div class="gdlr-core-column-service-title-wrap">
-                                                            <h3 class="gdlr-core-column-service-title gdlr-core-skin-title" id="h3_1dd7_8">Bachelor’s and Master’s</h3></div>
+                                                            <h3 class="gdlr-core-column-service-title gdlr-core-skin-title" id="h3_1dd7_8">Comfortable Classrooms</h3></div>
                                                         <div class="gdlr-core-column-service-content" id="div_1dd7_40">
                                                             <p>Kingster University was established by John Smith in 1920 for the public benefit and it is recognized.</p> <a class="gdlr-core-column-service-read-more gdlr-core-info-font" href="#" id="a_1dd7_3">Learn More</a></div>
                                                     </div>
@@ -241,7 +244,7 @@
                                                     <div class="gdlr-core-column-service-media gdlr-core-media-image" id="div_1dd7_42"><img src="upload/col-icon-4.png" alt="" width="47" height="47" title="col-icon-4" /></div>
                                                     <div class="gdlr-core-column-service-content-wrapper">
                                                         <div class="gdlr-core-column-service-title-wrap">
-                                                            <h3 class="gdlr-core-column-service-title gdlr-core-skin-title" id="h3_1dd7_9">University Life</h3></div>
+                                                            <h3 class="gdlr-core-column-service-title gdlr-core-skin-title" id="h3_1dd7_9">Disciplined Students</h3></div>
                                                         <div class="gdlr-core-column-service-content" id="div_1dd7_43">
                                                             <p>Kingster University was established by John Smith in 1920 for the public benefit and it is recognized.</p> <a class="gdlr-core-column-service-read-more gdlr-core-info-font" href="#" id="a_1dd7_4">Learn More</a></div>
                                                     </div>
@@ -261,10 +264,10 @@
                                     <div class="gdlr-core-tab-item gdlr-core-js gdlr-core-item-pdb  gdlr-core-left-align gdlr-core-tab-style1-horizontal gdlr-core-item-pdlr">
                                        <div class="gdlr-core-tab-item-wrap">
                                             <div class="gdlr-core-tab-item-title-wrap clearfix gdlr-core-title-font">
-                                                <div class="gdlr-core-tab-item-title  gdlr-core-active" data-tab-id="1">Benefits</div>
-                                                <div class="gdlr-core-tab-item-title " data-tab-id="2">Self Development</div>
-                                                <div class="gdlr-core-tab-item-title " data-tab-id="3">Spirituality</div>
-                                                <div class="gdlr-core-tab-item-title " data-tab-id="4">Alumni</div>
+                                                <div class="gdlr-core-tab-item-title " data-tab-id="4">Benefits</div>
+                                                <div class="gdlr-core-tab-item-title  gdlr-core-active" data-tab-id="1">Our Mission</div>
+                                                <div class="gdlr-core-tab-item-title " data-tab-id="2">Our Values</div>
+                                                <div class="gdlr-core-tab-item-title " data-tab-id="3">Our Vision</div>
                                             </div>
                                             <div class="gdlr-core-tab-item-content-wrap clearfix">
                                                 <div class="gdlr-core-tab-item-content  gdlr-core-active" data-tab-id="1" >
@@ -300,6 +303,53 @@
                                                     <p>Kingster University was established by John Smith in 1920 for the public benefit and it is recognized globally. Throughout our great history, Kingster has offered access to a wide range of academic opportunities. As a world leader in higher education, the University has pioneered change in the sector.</p>
                                                 </div>
                                             </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="gdlr-core-pbf-wrapper " style="padding: 30px 20px 50px 20px;">
+                        <div class="gdlr-core-pbf-wrapper-content gdlr-core-js ">
+                            <div class="gdlr-core-pbf-wrapper-container clearfix gdlr-core-pbf-wrapper-full">
+                                <div class="gdlr-core-pbf-element">
+                                    <div class="gdlr-core-title-item gdlr-core-item-pdb clearfix  gdlr-core-center-align gdlr-core-title-item-caption-bottom gdlr-core-item-pdlr" style="padding-bottom: 60px ;">
+                                        <div class="gdlr-core-title-item-title-wrap clearfix">
+                                            <h3 class="gdlr-core-title-item-title gdlr-core-skin-title " style="text-transform: none ;">Our Gallery</h3></div><a href="index.html"><span class="gdlr-core-title-item-caption gdlr-core-info-font gdlr-core-skin-caption">View More</span></a></div>
+                                </div>
+                                <div class="gdlr-core-pbf-element">
+                                    <div class="gdlr-core-gallery-item gdlr-core-item-pdb clearfix  gdlr-core-gallery-item-style-scroll gdlr-core-item-pdlr ">
+                                        <div class="gdlr-core-sly-slider gdlr-core-js-2">
+                                            <ul class="slides">
+                                                <li class="gdlr-core-gallery-list gdlr-core-item-mglr">
+                                                    <div class="gdlr-core-media-image" style="height: 500px ;">
+                                                        <a class="gdlr-core-lightgallery gdlr-core-js " href="upload/shutterstock_160526219.jpg" data-lightbox-group="gdlr-core-img-group-3"><img src="upload/shutterstock_160526219-800x533.jpg" width="1280" height="853"  alt="" /><span class="gdlr-core-image-overlay  gdlr-core-gallery-image-overlay gdlr-core-center-align"><i class="gdlr-core-image-overlay-icon gdlr-core-size-22 fa fa-search"  ></i></span></a>
+                                                    </div>
+                                                </li>
+                                                <li class="gdlr-core-gallery-list gdlr-core-item-mglr">
+                                                    <div class="gdlr-core-media-image" style="height: 500px ;">
+                                                        <a class="gdlr-core-lightgallery gdlr-core-js " href="upload/shutterstock_106223549.jpg" data-lightbox-group="gdlr-core-img-group-3"><img src="upload/shutterstock_106223549-800x574.jpg" width="1280" height="919"  alt="" /><span class="gdlr-core-image-overlay  gdlr-core-gallery-image-overlay gdlr-core-center-align"><i class="gdlr-core-image-overlay-icon gdlr-core-size-22 fa fa-search"  ></i></span></a>
+                                                    </div>
+                                                </li>
+                                                <li class="gdlr-core-gallery-list gdlr-core-item-mglr">
+                                                    <div class="gdlr-core-media-image" style="height: 500px ;">
+                                                        <a class="gdlr-core-lightgallery gdlr-core-js " href="upload/shutterstock_294489926.jpg" data-lightbox-group="gdlr-core-img-group-3"><img src="upload/shutterstock_294489926-800x533.jpg" width="1800" height="1200"  alt="" /><span class="gdlr-core-image-overlay  gdlr-core-gallery-image-overlay gdlr-core-center-align"><i class="gdlr-core-image-overlay-icon gdlr-core-size-22 fa fa-search"  ></i></span></a>
+                                                    </div>
+                                                </li>
+                                                <li class="gdlr-core-gallery-list gdlr-core-item-mglr">
+                                                    <div class="gdlr-core-media-image" style="height: 500px ;">
+                                                        <a class="gdlr-core-lightgallery gdlr-core-js " href="upload/shutterstock_481869205.jpg" data-lightbox-group="gdlr-core-img-group-3"><img src="upload/shutterstock_481869205-800x405.jpg" width="2000" height="1013"  alt="" /><span class="gdlr-core-image-overlay  gdlr-core-gallery-image-overlay gdlr-core-center-align"><i class="gdlr-core-image-overlay-icon gdlr-core-size-22 fa fa-search"  ></i></span></a>
+                                                    </div>
+                                                </li>
+                                                <li class="gdlr-core-gallery-list gdlr-core-item-mglr">
+                                                    <div class="gdlr-core-media-image" style="height: 500px ;">
+                                                        <a class="gdlr-core-lightgallery gdlr-core-js " href="upload/shutterstock_734589535.jpg" data-lightbox-group="gdlr-core-img-group-3"><img src="upload/shutterstock_734589535-800x534.jpg" width="2000" height="1335"  alt="" /><span class="gdlr-core-image-overlay  gdlr-core-gallery-image-overlay gdlr-core-center-align"><i class="gdlr-core-image-overlay-icon gdlr-core-size-22 fa fa-search"  ></i></span></a>
+                                                    </div>
+                                                </li>
+                                            </ul>
+                                        </div>
+                                        <div class="gdlr-core-sly-scroll">
+                                            <div class="gdlr-core-sly-scroll-handle"></div>
                                         </div>
                                     </div>
                                 </div>
@@ -361,7 +411,7 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
+                    </div><br>
                     
                     
                 </div>
