--- a/index.html
+++ b/index.html
@@ -83,19 +83,6 @@
                                 <div class="kingster-navigation-slide-bar" id="kingster-navigation-slide-bar"></div>
                             </div>
                             <div class="kingster-main-menu-right-wrap clearfix ">
-                                <div class="kingster-top-search-wrap">
-                                    <div class="kingster-top-search-close"></div>
-                                    <div class="kingster-top-search-row">
-                                        <div class="kingster-top-search-cell">
-                                            <form role="search" method="get" class="search-form" action="#">
-                                                <input type="text" class="search-field kingster-title-font" placeholder="Search..." value="" name="s">
-                                                <div class="kingster-top-search-submit"><i class="fa fa-search"></i></div>
-                                                <input type="submit" class="search-submit" value="Search">
-                                                <div class="kingster-top-search-close"><i class="icon_close"></i></div>
-                                            </form>
-                                        </div>
-                                    </div>
-                                </div>
                             </div>
                         </div>
                     </div>
@@ -158,17 +145,14 @@
                                             <div class="gdlr-core-pbf-element">
                                                 <div class="gdlr-core-text-box-item gdlr-core-item-pdlr gdlr-core-item-pdb gdlr-core-left-align" id="div_1dd7_26">
                                                     <div class="gdlr-core-text-box-item-content" id="div_1dd7_27">
-                                                        <p>The Urji Beri Primary School offers education for children aged 3 to 13. Its curriculum is based on the programs of the Ministry of Education and taught in Amharic and English language.</p>
+                                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas dignissim sapien libero, a pulvinar enim pharetra accumsan. Proin metus metus, ullamcorper ac lorem ut, bibendum egestas urna.</p>
                                                     </div>
                                                 </div>
                                             </div>
                                             <div class="gdlr-core-pbf-element">
                                                 <div class="gdlr-core-text-box-item gdlr-core-item-pdlr gdlr-core-item-pdb gdlr-core-left-align" id="div_1dd7_28">
                                                     <div class="gdlr-core-text-box-item-content" id="div_1dd7_29">
-                                                        <p>Our mission is to Support a safe, caring, respectful environment that values creativity, diversity, and inclusivity.
-                                                            Develop self-aware learners with the tools for fulfillment in their world and beyond.
-                                                            Provide best practice learning that empowers individuals to set and reach high standards.
-                                                            Encourage students to think globally and act locally.</p>
+                                                        <p>Maecenas tristique magna at ante hendrerit accumsan. Nam cursus hendrerit elit. Vestibulum lectus ex, gravida vitae augue vel, pulvinar hendrerit mi. Integer fringilla neque erat, ut dictum urna pulvinar laoreet. Cras ut libero ante. Aenean ullamcorper leo a venenatis fringilla. Ut ac ultrices ligula. Sed at malesuada arcu, et auctor urna.</p>
                                                     </div>
                                                 </div>
                                             </div>
@@ -190,12 +174,12 @@
                                         <div class="gdlr-core-pbf-column-content clearfix gdlr-core-js ">
                                             <div class="gdlr-core-pbf-element">
                                                 <div class="gdlr-core-column-service-item gdlr-core-item-pdb  gdlr-core-left-align gdlr-core-column-service-icon-top gdlr-core-no-caption gdlr-core-item-pdlr" id="div_1dd7_32">
-                                                    <div class="gdlr-core-column-service-media gdlr-core-media-image" id="div_1dd7_33"><img src="upload/col-icon-1.png" alt="" width="41" height="41" title="col-icon-1" /></div>
+                                                    <div class="gdlr-core-column-service-media gdlr-core-media-image" id="div_1dd7_33"><img src="upload/male-teacher.png" alt="" width="41" height="41" title="col-icon-1" /></div>
                                                     <div class="gdlr-core-column-service-content-wrapper">
                                                         <div class="gdlr-core-column-service-title-wrap">
-                                                            <h3 class="gdlr-core-column-service-title gdlr-core-skin-title" id="h3_1dd7_6">Experienced Students</h3></div>
+                                                            <h3 class="gdlr-core-column-service-title gdlr-core-skin-title" id="h3_1dd7_6">Experienced Teachers</h3></div>
                                                         <div class="gdlr-core-column-service-content" id="div_1dd7_34">
-                                                            <p>Kingster University was established by John Smith in 1920 for the public benefit and it is recognized.</p> <a class="gdlr-core-column-service-read-more gdlr-core-info-font" href="#" id="a_1dd7_1">Learn More</a></div>
+                                                            <p>Lorem ipsum dolor sit amet, adipiscing elit. Maecenas dignissim sapien libero.</p></div>
                                                     </div>
                                                 </div>
                                             </div>
@@ -207,12 +191,12 @@
                                         <div class="gdlr-core-pbf-column-content clearfix gdlr-core-js ">
                                             <div class="gdlr-core-pbf-element">
                                                 <div class="gdlr-core-column-service-item gdlr-core-item-pdb  gdlr-core-left-align gdlr-core-column-service-icon-top gdlr-core-no-caption gdlr-core-item-pdlr" id="div_1dd7_35">
-                                                    <div class="gdlr-core-column-service-media gdlr-core-media-image" id="div_1dd7_36"><img src="upload/col-icon-2.png" alt="" width="43" height="45" title="col-icon-2" /></div>
+                                                    <div class="gdlr-core-column-service-media gdlr-core-media-image" id="div_1dd7_36"><img src="upload/education.png" alt="" width="43" height="45" title="col-icon-2" /></div>
                                                     <div class="gdlr-core-column-service-content-wrapper">
                                                         <div class="gdlr-core-column-service-title-wrap">
                                                             <h3 class="gdlr-core-column-service-title gdlr-core-skin-title" id="h3_1dd7_7">High Quality Education</h3></div>
                                                         <div class="gdlr-core-column-service-content" id="div_1dd7_37">
-                                                            <p>Kingster University was established by John Smith in 1920 for the public benefit and it is recognized.</p> <a class="gdlr-core-column-service-read-more gdlr-core-info-font" href="#" id="a_1dd7_2">Learn More</a></div>
+                                                            <p>Lorem ipsum dolor sit amet, adipiscing elit. Maecenas dignissim sapien libero.</p></div>
                                                     </div>
                                                 </div>
                                             </div>
@@ -224,12 +208,12 @@
                                         <div class="gdlr-core-pbf-column-content clearfix gdlr-core-js ">
                                             <div class="gdlr-core-pbf-element">
                                                 <div class="gdlr-core-column-service-item gdlr-core-item-pdb  gdlr-core-left-align gdlr-core-column-service-icon-top gdlr-core-no-caption gdlr-core-item-pdlr" id="div_1dd7_38">
-                                                    <div class="gdlr-core-column-service-media gdlr-core-media-image" id="div_1dd7_39"><img src="upload/col-icon-3.png" alt="" width="40" height="43" title="col-icon-3" /></div>
+                                                    <div class="gdlr-core-column-service-media gdlr-core-media-image" id="div_1dd7_39"><img src="upload/classroom.png" alt="" width="40" height="43" title="col-icon-3" /></div>
                                                     <div class="gdlr-core-column-service-content-wrapper">
                                                         <div class="gdlr-core-column-service-title-wrap">
                                                             <h3 class="gdlr-core-column-service-title gdlr-core-skin-title" id="h3_1dd7_8">Comfortable Classrooms</h3></div>
                                                         <div class="gdlr-core-column-service-content" id="div_1dd7_40">
-                                                            <p>Kingster University was established by John Smith in 1920 for the public benefit and it is recognized.</p> <a class="gdlr-core-column-service-read-more gdlr-core-info-font" href="#" id="a_1dd7_3">Learn More</a></div>
+                                                            <p>Lorem ipsum dolor sit amet, adipiscing elit. Maecenas dignissim sapien libero.</p></div>
                                                     </div>
                                                 </div>
                                             </div>
@@ -241,12 +225,12 @@
                                         <div class="gdlr-core-pbf-column-content clearfix gdlr-core-js ">
                                             <div class="gdlr-core-pbf-element">
                                                 <div class="gdlr-core-column-service-item gdlr-core-item-pdb  gdlr-core-left-align gdlr-core-column-service-icon-top gdlr-core-no-caption gdlr-core-item-pdlr" id="div_1dd7_41">
-                                                    <div class="gdlr-core-column-service-media gdlr-core-media-image" id="div_1dd7_42"><img src="upload/col-icon-4.png" alt="" width="47" height="47" title="col-icon-4" /></div>
+                                                    <div class="gdlr-core-column-service-media gdlr-core-media-image" id="div_1dd7_42"><img src="upload/student.png" alt="" width="47" height="47" title="col-icon-4" /></div>
                                                     <div class="gdlr-core-column-service-content-wrapper">
                                                         <div class="gdlr-core-column-service-title-wrap">
                                                             <h3 class="gdlr-core-column-service-title gdlr-core-skin-title" id="h3_1dd7_9">Disciplined Students</h3></div>
                                                         <div class="gdlr-core-column-service-content" id="div_1dd7_43">
-                                                            <p>Kingster University was established by John Smith in 1920 for the public benefit and it is recognized.</p> <a class="gdlr-core-column-service-read-more gdlr-core-info-font" href="#" id="a_1dd7_4">Learn More</a></div>
+                                                            <p>Lorem ipsum dolor sit amet, adipiscing elit. Maecenas dignissim sapien libero.</p></div>
                                                     </div>
                                                 </div>
                                             </div>
