--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                         <div class="kingster-mm-menu-wrap kingster-navigation-font" id="kingster-mobile-menu" data-slide="right">
                             <ul id="menu-main-navigation" class="m-menu">
                                 <li class="menu-item kingster-normal-menu"><a href="#">Home</a></li>
-                                <li class="menu-item kingster-normal-menu"><a href="#">About</a></li>
+                                <li class="menu-item kingster-normal-menu"><a href="about.html">About us</a></li>
                                 <li class="menu-item kingster-normal-menu"><a href="#">Gallery</a></li>
                                 <li class="menu-item kingster-normal-menu"><a href="#">Announcement</a></li>
                                 <li class="menu-item kingster-normal-menu"><a href="#">Online Result</a></li>
@@ -72,7 +72,7 @@
                             <div class="kingster-main-menu" id="kingster-main-menu">
                                 <ul id="menu-main-navigation-1" class="sf-menu">
                                     <li class="menu-item kingster-normal-menu"><a href="#">Home</a></li>
-                                    <li class="menu-item kingster-normal-menu"><a href="#">About</a></li>
+                                    <li class="menu-item kingster-normal-menu"><a href="about.html">About Us</a></li>
                                     <li class="menu-item kingster-normal-menu"><a href="#">Gallery</a></li>
                                     <li class="menu-item kingster-normal-menu"><a href="#">Announcement</a></li>
                                     <li class="menu-item kingster-normal-menu"><a href="#">Online Result</a></li>
@@ -157,7 +157,7 @@
                                                 </div>
                                             </div>
                                             <div class="gdlr-core-pbf-element">
-                                                <div class="gdlr-core-button-item gdlr-core-item-pdlr gdlr-core-item-pdb gdlr-core-left-align"><a class="gdlr-core-button  gdlr-core-button-transparent gdlr-core-button-no-border" href="#" id="gdlr-core-button-id-66813"><span class="gdlr-core-content" >Read More</span><i class="gdlr-core-pos-right fa fa-long-arrow-right" id="i_1dd7_0"  ></i></a></div>
+                                                <div class="gdlr-core-button-item gdlr-core-item-pdlr gdlr-core-item-pdb gdlr-core-left-align"><a class="gdlr-core-button  gdlr-core-button-transparent gdlr-core-button-no-border" href="about.html" id="gdlr-core-button-id-66813"><span class="gdlr-core-content" >Read More</span><i class="gdlr-core-pos-right fa fa-long-arrow-right" id="i_1dd7_0"  ></i></a></div>
                                             </div>
                                         </div>
                                     </div>
@@ -208,7 +208,7 @@
                                         <div class="gdlr-core-pbf-column-content clearfix gdlr-core-js ">
                                             <div class="gdlr-core-pbf-element">
                                                 <div class="gdlr-core-column-service-item gdlr-core-item-pdb  gdlr-core-left-align gdlr-core-column-service-icon-top gdlr-core-no-caption gdlr-core-item-pdlr" id="div_1dd7_38">
-                                                    <div class="gdlr-core-column-service-media gdlr-core-media-image" id="div_1dd7_39"><img src="upload/classroom.png" alt="" width="40" height="43" title="col-icon-3" /></div>
+                                                    <div class="gdlr-core-column-service-media gdlr-core-media-image" id="div_1dd7_39"><img src="upload/classroom-icon.png" alt="" width="40" height="43" title="col-icon-3" /></div>
                                                     <div class="gdlr-core-column-service-content-wrapper">
                                                         <div class="gdlr-core-column-service-title-wrap">
                                                             <h3 class="gdlr-core-column-service-title gdlr-core-skin-title" id="h3_1dd7_8">Comfortable Classrooms</h3></div>
@@ -416,7 +416,7 @@
                                 <div class="menu-our-campus-container">
                                     <ul id="menu-our-campus" class="gdlr-core-custom-menu-widget gdlr-core-menu-style-plain">
                                         <li class="menu-item"><a href="#">Home</a></li>
-                                        <li class="menu-item"><a href="#">About us</a></li>
+                                        <li class="menu-item"><a href="about.html">About us</a></li>
                                         <li class="menu-item"><a href="#">Contact Us</a></li>
                                         <li class="menu-item"><a href="#">Site Map</a></li>
 
