--- a/about.html
+++ b/about.html
@@ -29,14 +29,14 @@
                 <div class="kingster-mobile-menu-right">
                     <div class="kingster-mobile-menu"><a class="kingster-mm-menu-button kingster-mobile-menu-button kingster-mobile-button-hamburger" href="#kingster-mobile-menu"><span></span></a>
                         <div class="kingster-mm-menu-wrap kingster-navigation-font" id="kingster-mobile-menu" data-slide="right">
-                            <ul id="menu-main-navigation-1" class="sf-menu">
+                            <ul id="menu-main-navigation" class="m-menu">
                                 <li class="menu-item kingster-normal-menu"><a href="#">Home</a></li>
-                                <li class="menu-item kingster-normal-menu"><a href="about.html">About Us</a></li>
+                                <li class="menu-item kingster-normal-menu"><a href="about.html">About</a></li>
                                 <li class="menu-item kingster-normal-menu"><a href="gallery.html">Gallery</a></li>
                                 <li class="menu-item kingster-normal-menu"><a href="#">Announcement</a></li>
                                 <li class="menu-item kingster-normal-menu"><a href="#">Online Result</a></li>
                                 <li class="menu-item kingster-normal-menu"><a href="#">Teachers Login</a></li>
-                                <li class="menu-item kingster-normal-menu"><a href="contact.html">Contact</a></li>
+                                <li class="menu-item kingster-normal-menu"><a href="contact">Contact</a></li>
 
                             </ul>
                         </div>
